--- a/src/testcrop/index.html
+++ b/src/testcrop/index.html
@@ -14,7 +14,7 @@
     <span class="resize-handle resize-handle-ne"></span>
     <span class="resize-handle resize-handle-sw"></span>
     <span class="resize-handle resize-handle-se"></span>
-    <img id="img" class="resize-image" src="/img/5.jpg" alt="Image" width="300"/>
+    <img id="img" class="resize-image" src="/Edit_img/img/5.jpg" alt="Image" width="300"/>
 </div>
 <div id="overlay" class="overlay">
     <div class="overlay-inner">
